Corregir enlaces rotos en página de ayuda: reemplazar href por routerLink apropiados

--- a/src/app/pages/ayuda/ayuda.component.css
+++ b/src/app/pages/ayuda/ayuda.component.css
@@ -88,6 +88,17 @@ a:hover {
   text-decoration: underline;
 }
 
+.disabled {
+  color: #999;
+  cursor: not-allowed;
+  font-style: italic;
+}
+
+.disabled:hover {
+  text-decoration: none;
+  color: #999;
+}
+
 .sub-list {
   margin-top: 10px;
   padding-left: 20px;
