--- a/src/app/pages/ayuda/ayuda.component.html
+++ b/src/app/pages/ayuda/ayuda.component.html
@@ -47,37 +47,37 @@
       <h2>¿Para qué sorteos generar predicciones?</h2>
       <div class="lottery-list">
         <div class="lottery-item">
-          <a href="#" class="lottery-link">Euromillones y El Millón</a>
+          <a routerLink="/euromillon" class="lottery-link">Euromillones y El Millón</a>
         </div>
         <div class="lottery-item">
-          <a href="#" class="lottery-link">La Primitiva y Joker</a>
+          <a routerLink="/primitiva" class="lottery-link">La Primitiva y Joker</a>
         </div>
         <div class="lottery-item">
-          <a href="#" class="lottery-link">BonoLoto</a>
+          <a routerLink="/bonoloto" class="lottery-link">BonoLoto</a>
         </div>
         <div class="lottery-item">
-          <a href="#" class="lottery-link">El Gordo de La Primitiva</a>
+          <a routerLink="/gordo-primitiva" class="lottery-link">El Gordo de La Primitiva</a>
         </div>
         <div class="lottery-item">
-          <a href="#" class="lottery-link">EuroDreams</a>
+          <a routerLink="/eurodreams" class="lottery-link">EuroDreams</a>
         </div>
         <div class="lottery-item">
-          <a href="#" class="lottery-link">Lotería Nacional</a>
+          <a routerLink="/loteria-nacional" class="lottery-link">Lotería Nacional</a>
         </div>
         <div class="lottery-item">
-          <a href="#" class="lottery-link">Lotería de Navidad</a>
+          <a routerLink="/loteria-nacional" class="lottery-link">Lotería de Navidad</a>
         </div>
         <div class="lottery-item">
-          <a href="#" class="lottery-link">La Quiniela</a>
+          <span class="lottery-link disabled">La Quiniela (Próximamente)</span>
         </div>
         <div class="lottery-item">
-          <a href="#" class="lottery-link">Lototurf</a>
+          <a routerLink="/lototurf" class="lottery-link">Lototurf</a>
         </div>
         <div class="lottery-item">
-          <a href="#" class="lottery-link">Quinigol</a>
+          <span class="lottery-link disabled">Quinigol (Próximamente)</span>
         </div>
         <div class="lottery-item">
-          <a href="#" class="lottery-link">Quintuple Plus</a>
+          <span class="lottery-link disabled">Quintuple Plus (Próximamente)</span>
         </div>
       </div>
     </div>
@@ -86,24 +86,24 @@
       <h2>Normativa:</h2>
       <div class="normative-list">
         <div class="normative-item">
-          <a href="#" class="normative-link">Ley de Regulación del juego, y normativa de desarrollo y complementaria</a>
+          <a routerLink="/aviso-legal" class="normative-link">Ley de Regulación del juego, y normativa de desarrollo y complementaria</a>
         </div>
         <div class="normative-item">
-          <a href="#" class="normative-link">Política de privacidad para (participantes)</a>
+          <a routerLink="/proteccion-datos" class="normative-link">Política de privacidad para (participantes)</a>
         </div>
         <div class="normative-item">
           <h3>Normativa de los juegos:</h3>
           <ul class="sub-list">
-            <li><a href="#">Euromillones y El Millón</a></li>
-            <li><a href="#">La Primitiva y Joker</a></li>
-            <li><a href="#">Bonoloto</a></li>
-            <li><a href="#">El Gordo de la Primitiva</a></li>
-            <li><a href="#">EuroDreams</a></li>
-            <li><a href="#">Lotería Nacional (en proceso de modificación)</a></li>
-            <li><a href="#">La Quiniela</a></li>
-            <li><a href="#">Lototurf</a></li>
-            <li><a href="#">Quinigol</a></li>
-            <li><a href="#">Quintuple Plus</a></li>
+            <li><a routerLink="/euromillon">Euromillones y El Millón</a></li>
+            <li><a routerLink="/primitiva">La Primitiva y Joker</a></li>
+            <li><a routerLink="/bonoloto">Bonoloto</a></li>
+            <li><a routerLink="/gordo-primitiva">El Gordo de la Primitiva</a></li>
+            <li><a routerLink="/eurodreams">EuroDreams</a></li>
+            <li><a routerLink="/loteria-nacional">Lotería Nacional (en proceso de modificación)</a></li>
+            <li><span class="disabled">La Quiniela (Próximamente)</span></li>
+            <li><a routerLink="/lototurf">Lototurf</a></li>
+            <li><span class="disabled">Quinigol (Próximamente)</span></li>
+            <li><span class="disabled">Quintuple Plus (Próximamente)</span></li>
           </ul>
         </div>
       </div>
@@ -113,25 +113,25 @@
       <h2>Más información sobre...</h2>
       <div class="more-info-list">
         <div class="more-info-item">
-          <a href="#" class="more-info-link">Cómo modificar los datos personales, la contraseña o la cuenta bancaria de tu titularidad</a>
+          <a routerLink="/perfil" class="more-info-link">Cómo modificar los datos personales, la contraseña o la cuenta bancaria de tu titularidad</a>
         </div>
         <div class="more-info-item">
-          <a href="#" class="more-info-link">Preguntas frecuentes sobre protección de datos</a>
+          <a routerLink="/proteccion-datos" class="more-info-link">Preguntas frecuentes sobre protección de datos</a>
         </div>
         <div class="more-info-item">
-          <a href="#" class="more-info-link">App de LOTO IA.COM</a>
+          <span class="more-info-link disabled">App de LOTO IA.COM (Próximamente)</span>
         </div>
         <div class="more-info-item">
-          <a href="#" class="more-info-link">La seguridad en la web y en la App</a>
+          <span class="more-info-link disabled">La seguridad en la web y en la App (Próximamente)</span>
         </div>
         <div class="more-info-item">
-          <a href="#" class="more-info-link">Notificaciones en las App o en mi navegador</a>
+          <span class="more-info-link disabled">Notificaciones en las App o en mi navegador (Próximamente)</span>
         </div>
         <div class="more-info-item">
-          <a href="#" class="more-info-link">Juego Responsable</a>
+          <a routerLink="/juego-seguro" class="more-info-link">Juego Responsable</a>
         </div>
         <div class="more-info-item">
-          <a href="#" class="more-info-link">Diccionario de términos de Loterías</a>
+          <span class="more-info-link disabled">Diccionario de términos de Loterías (Próximamente)</span>
         </div>
       </div>
     </div>
@@ -140,28 +140,28 @@
       <h2>Calendarios</h2>
       <div class="calendar-list">
         <div class="calendar-item">
-          <a href="#" class="calendar-link">Horarios de sorteos y de juegos</a>
+          <span class="calendar-link disabled">Horarios de sorteos y de juegos (Próximamente)</span>
         </div>
         <div class="calendar-item">
-          <a href="#" class="calendar-link">La Quiniela: Calendario temporada 2023 - 2024 (Provisional)</a>
+          <span class="calendar-link disabled">La Quiniela: Calendario temporada 2023 - 2024 (Próximamente)</span>
         </div>
         <div class="calendar-item">
-          <a href="#" class="calendar-link">Quinigol: Calendario temporada 2023 - 2024 (Provisional)</a>
+          <span class="calendar-link disabled">Quinigol: Calendario temporada 2023 - 2024 (Próximamente)</span>
         </div>
         <div class="calendar-item">
-          <a href="#" class="calendar-link">La Quiniela y Quinigol: Próximas jornadas</a>
+          <span class="calendar-link disabled">La Quiniela y Quinigol: Próximas jornadas (Próximamente)</span>
         </div>
         <div class="calendar-item">
-          <a href="#" class="calendar-link">Calendario hípicas 2023</a>
+          <a routerLink="/lototurf" class="calendar-link">Calendario hípicas 2023</a>
         </div>
         <div class="calendar-item">
-          <a href="#" class="calendar-link">Calendario hípicas 2024</a>
+          <a routerLink="/lototurf" class="calendar-link">Calendario hípicas 2024</a>
         </div>
         <div class="calendar-item">
-          <a href="#" class="calendar-link">Calendarios Lotería Nacional</a>
+          <a routerLink="/loteria-nacional" class="calendar-link">Calendarios Lotería Nacional</a>
         </div>
         <div class="calendar-item">
-          <a href="#" class="calendar-link">Programas de premios Lotería Nacional</a>
+          <a routerLink="/loteria-nacional" class="calendar-link">Programas de premios Lotería Nacional</a>
         </div>
       </div>
     </div>
@@ -170,25 +170,25 @@
       <h2>Tutoriales y estadísticas</h2>
       <div class="tutorial-list">
         <div class="tutorial-item">
-          <a href="#" class="tutorial-link">Guía del QUINIELISTA</a>
+          <span class="tutorial-link disabled">Guía del QUINIELISTA (Próximamente)</span>
         </div>
         <div class="tutorial-item">
-          <a href="#" class="tutorial-link">Estadísticas de Euromillones</a>
+          <a routerLink="/euromillon" class="tutorial-link">Estadísticas de Euromillones</a>
         </div>
         <div class="tutorial-item">
-          <a href="#" class="tutorial-link">Estadísticas de La Primitiva</a>
+          <a routerLink="/primitiva" class="tutorial-link">Estadísticas de La Primitiva</a>
         </div>
         <div class="tutorial-item">
-          <a href="#" class="tutorial-link">Estadísticas de Bonoloto</a>
+          <a routerLink="/bonoloto" class="tutorial-link">Estadísticas de Bonoloto</a>
         </div>
         <div class="tutorial-item">
-          <a href="#" class="tutorial-link">Estadísticas de El Gordo de La Primitiva</a>
+          <a routerLink="/gordo-primitiva" class="tutorial-link">Estadísticas de El Gordo de La Primitiva</a>
         </div>
         <div class="tutorial-item">
-          <a href="#" class="tutorial-link">Estadísticas de Lotería Nacional</a>
+          <a routerLink="/loteria-nacional" class="tutorial-link">Estadísticas de Lotería Nacional</a>
         </div>
         <div class="tutorial-item">
-          <a href="#" class="tutorial-link">Estadísticas de Lototurf</a>
+          <a routerLink="/lototurf" class="tutorial-link">Estadísticas de Lototurf</a>
         </div>
       </div>
     </div>
