Corregir renderización de bolas en Lototurf: estandarizar staticRendering para todas las secciones

--- a/src/app/pages/lototurf/lototurf.component.html
+++ b/src/app/pages/lototurf/lototurf.component.html
@@ -166,13 +166,13 @@
           <h3>Caballos más frecuentes</h3>
           <div class="lottery-balls-container" id="most-frequent-horses-container">
             <div class="ball-wrapper">
-              <app-euromillones-ball [number]="3" [type]="'star'" [size]="80" [priority]="1" [customColor]="'#8B4513'"></app-euromillones-ball>
+              <app-euromillones-ball [number]="3" [type]="'star'" [size]="80" [staticRendering]="true" [customColor]="'#8B4513'"></app-euromillones-ball>
             </div>
             <div class="ball-wrapper">
-              <app-euromillones-ball [number]="7" [type]="'star'" [size]="80" [priority]="1" [customColor]="'#8B4513'"></app-euromillones-ball>
+              <app-euromillones-ball [number]="7" [type]="'star'" [size]="80" [staticRendering]="true" [customColor]="'#8B4513'"></app-euromillones-ball>
             </div>
             <div class="ball-wrapper">
-              <app-euromillones-ball [number]="10" [type]="'star'" [size]="80" [priority]="1" [customColor]="'#8B4513'"></app-euromillones-ball>
+              <app-euromillones-ball [number]="10" [type]="'star'" [size]="80" [staticRendering]="true" [customColor]="'#8B4513'"></app-euromillones-ball>
             </div>
           </div>
         </div>
@@ -180,22 +180,22 @@
           <h3>Números menos frecuentes</h3>
           <div class="lottery-balls-container" id="least-frequent-numbers-container">
             <div class="ball-wrapper">
-              <app-euromillones-ball [number]="1" [size]="80" [priority]="0" [customColor]="'#4CAF50'"></app-euromillones-ball>
+              <app-euromillones-ball [number]="1" [size]="80" [staticRendering]="true" [customColor]="'#4CAF50'"></app-euromillones-ball>
             </div>
             <div class="ball-wrapper">
-              <app-euromillones-ball [number]="8" [size]="80" [priority]="0" [customColor]="'#4CAF50'"></app-euromillones-ball>
+              <app-euromillones-ball [number]="8" [size]="80" [staticRendering]="true" [customColor]="'#4CAF50'"></app-euromillones-ball>
             </div>
             <div class="ball-wrapper">
-              <app-euromillones-ball [number]="13" [size]="80" [priority]="0" [customColor]="'#4CAF50'"></app-euromillones-ball>
+              <app-euromillones-ball [number]="13" [size]="80" [staticRendering]="true" [customColor]="'#4CAF50'"></app-euromillones-ball>
             </div>
             <div class="ball-wrapper">
-              <app-euromillones-ball [number]="19" [size]="80" [priority]="0" [customColor]="'#4CAF50'"></app-euromillones-ball>
+              <app-euromillones-ball [number]="19" [size]="80" [staticRendering]="true" [customColor]="'#4CAF50'"></app-euromillones-ball>
             </div>
             <div class="ball-wrapper">
-              <app-euromillones-ball [number]="25" [size]="80" [priority]="0" [customColor]="'#4CAF50'"></app-euromillones-ball>
+              <app-euromillones-ball [number]="25" [size]="80" [staticRendering]="true" [customColor]="'#4CAF50'"></app-euromillones-ball>
             </div>
             <div class="ball-wrapper">
-              <app-euromillones-ball [number]="31" [size]="80" [priority]="0" [customColor]="'#4CAF50'"></app-euromillones-ball>
+              <app-euromillones-ball [number]="31" [size]="80" [staticRendering]="true" [customColor]="'#4CAF50'"></app-euromillones-ball>
             </div>
           </div>
         </div>
@@ -212,26 +212,26 @@
         <div class="result-numbers">
           <div class="lottery-balls-container" id="last-results-container">
             <div class="ball-wrapper">
-              <app-euromillones-ball [number]="3" [size]="80" [priority]="2" [customColor]="'#4CAF50'"></app-euromillones-ball>
+              <app-euromillones-ball [number]="3" [size]="80" [staticRendering]="true" [customColor]="'#4CAF50'"></app-euromillones-ball>
             </div>
             <div class="ball-wrapper">
-              <app-euromillones-ball [number]="10" [size]="80" [priority]="2" [customColor]="'#4CAF50'"></app-euromillones-ball>
+              <app-euromillones-ball [number]="10" [size]="80" [staticRendering]="true" [customColor]="'#4CAF50'"></app-euromillones-ball>
             </div>
             <div class="ball-wrapper">
-              <app-euromillones-ball [number]="17" [size]="80" [priority]="2" [customColor]="'#4CAF50'"></app-euromillones-ball>
+              <app-euromillones-ball [number]="17" [size]="80" [staticRendering]="true" [customColor]="'#4CAF50'"></app-euromillones-ball>
             </div>
             <div class="ball-wrapper">
-              <app-euromillones-ball [number]="22" [size]="80" [priority]="2" [customColor]="'#4CAF50'"></app-euromillones-ball>
+              <app-euromillones-ball [number]="22" [size]="80" [staticRendering]="true" [customColor]="'#4CAF50'"></app-euromillones-ball>
             </div>
             <div class="ball-wrapper">
-              <app-euromillones-ball [number]="26" [size]="80" [priority]="2" [customColor]="'#4CAF50'"></app-euromillones-ball>
+              <app-euromillones-ball [number]="26" [size]="80" [staticRendering]="true" [customColor]="'#4CAF50'"></app-euromillones-ball>
             </div>
             <div class="ball-wrapper">
-              <app-euromillones-ball [number]="29" [size]="80" [priority]="2" [customColor]="'#4CAF50'"></app-euromillones-ball>
+              <app-euromillones-ball [number]="29" [size]="80" [staticRendering]="true" [customColor]="'#4CAF50'"></app-euromillones-ball>
             </div>
             <span class="lottery-balls-separator">+</span>
             <div class="ball-wrapper">
-              <app-euromillones-ball [number]="5" [type]="'star'" [size]="80" [priority]="2" [customColor]="'#8B4513'"></app-euromillones-ball>
+              <app-euromillones-ball [number]="5" [type]="'star'" [size]="80" [staticRendering]="true" [customColor]="'#8B4513'"></app-euromillones-ball>
             </div>
           </div>
         </div>
